[gd_scene load_steps=2 format=3 uid="uid://how_to_play_001"]

[ext_resource type="Script" path="res://scripts/ui/how_to_play_screen.gd" id="1_script"]

[node name="HowToPlayScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.102, 0.102, 0.18, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="BackButton" type="Button" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "< Back"

[node name="TitleLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "How to Play"
vertical_alignment = 1

[node name="TabBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CombatTab" type="Button" parent="VBoxContainer/TabBar"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Combat"

[node name="ProgressionTab" type="Button" parent="VBoxContainer/TabBar"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Progression"

[node name="ElementsTab" type="Button" parent="VBoxContainer/TabBar"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Elements"

[node name="ContentPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ContentPanel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ContentLabel" type="RichTextLabel" parent="VBoxContainer/ContentPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Loading..."
fit_content = true
